--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flip-card-project",
-  "homepage": "https://myusername.github.io/flip-card-project",
+  "homepage": "https://mehmetakifakkus.github.io/flip-card-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
